--- a/index.html
+++ b/index.html
@@ -2,20 +2,45 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Datenschutzerklärung – Mein Finanzrechner</title>
 </head>
 <body>
   <h1>Datenschutzerklärung</h1>
+
+  <h2>Präambel</h2>
   <p>
-    Die App <strong>„Mein Finanzrechner“</strong> verarbeitet keine personenbezogenen Daten.
-    Alle Berechnungen erfolgen ausschließlich lokal auf dem Gerät.
-    Es werden keine Daten gespeichert, übertragen oder an Dritte weitergegeben.
+    Der Schutz Ihrer Daten ist uns wichtig. Diese App <strong>Mein Finanzrechner</strong> verarbeitet keine personenbezogenen Daten. 
+    Alle Berechnungen finden ausschließlich lokal auf Ihrem Gerät statt. Es werden weder Daten gespeichert noch an Dritte übermittelt.
   </p>
+
+  <h2>Keine Datenerhebung</h2>
   <p>
-    Verantwortlich: Privatperson, keine geschäftliche Nutzung.
+    Diese App erhebt, speichert oder verarbeitet keine personenbezogenen Daten im Sinne der DSGVO. 
+    Es findet auch keine Übermittlung an Server, Cloud-Dienste oder Dritte statt.
   </p>
+
+  <h2>Keine Cookies, kein Tracking</h2>
   <p>
-    Stand: 30.09.2025
+    Es werden keine Cookies gesetzt, keine Analyse-Tools eingebunden und keine Nutzungsprofile erstellt.
+  </p>
+
+  <h2>Kontakt</h2>
+  <p>
+    Bei Fragen zur App oder zu dieser Datenschutzerklärung können Sie sich jederzeit per E-Mail an uns wenden:  
+    <a href="mailto:manuel.jammertzheim.dev@gmail.com">manuel.jammertzheim.dev@gmail.com</a>
+  </p>
+
+  <h2>Stand</h2>
+  <p>30. September 2025</p>
+
+  <p class="seal">
+    <a href="https://datenschutz-generator.de/" 
+       title="Rechtstext von Dr. Schwenke – für weitere Informationen bitte anklicken." 
+       target="_blank" 
+       rel="noopener noreferrer nofollow">
+      Erstellt mit kostenlosem Datenschutz-Generator.de von Dr. Thomas Schwenke
+    </a>
   </p>
 </body>
 </html>
