--- a/support.html
+++ b/support.html
@@ -10,7 +10,7 @@
   
   <h2>Kontakt</h2>
   <p>Bei Fragen oder Problemen erreichst du uns per E-Mail:  
-     <a href="mailto:deine.email@example.com">deine.email@example.com</a></p>
+     <a href="mailto:manuel.jammertzheim.dev@gmail.com">manuel.jammertzheim.dev@gmail.com</a></p>
   
   <h2>Hinweise</h2>
   <ul>
